sort of working multi bulk send

--- a/src/applications/CMakeLists.txt
+++ b/src/applications/CMakeLists.txt
@@ -7,6 +7,7 @@ build_lib(
     helper/three-gpp-http-helper.cc
     helper/udp-client-server-helper.cc
     helper/udp-echo-helper.cc
+    model/multi-bulk-send-application.cc
     model/application-packet-probe.cc
     model/bulk-send-application.cc
     model/onoff-application.cc
@@ -33,6 +34,7 @@ build_lib(
     helper/three-gpp-http-helper.h
     helper/udp-client-server-helper.h
     helper/udp-echo-helper.h
+    model/multi-bulk-send-application.h
     model/application-packet-probe.h
     model/bulk-send-application.h
     model/onoff-application.h
