simple-sim working

--- a/src/applications/CMakeLists.txt
+++ b/src/applications/CMakeLists.txt
@@ -8,6 +8,7 @@ build_lib(
     helper/udp-client-server-helper.cc
     helper/udp-echo-helper.cc
     model/multi-bulk-send-application.cc
+    model/simple-multi-bulk-send-application.cc
     model/application-packet-probe.cc
     model/bulk-send-application.cc
     model/onoff-application.cc
@@ -36,6 +37,7 @@ build_lib(
     helper/udp-client-server-helper.h
     helper/udp-echo-helper.h
     model/multi-bulk-send-application.h
+    model/simple-multi-bulk-send-application.h
     model/application-packet-probe.h
     model/bulk-send-application.h
     model/onoff-application.h
